# nonebot-plugin-noadpls

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  MIGRATION.md  README.md  REFACTORING.md  pyproject.toml
.github/: dependabot.yml
.github/actions/setup-python/: action.yml
.github/workflows/: afdian-action.yml  afdian-sync.yml  changelog.yml  pypi-publish.yml  release.yml  ruff.yml  testrelease.yml
nonebot_plugin_noadpls/: __init__.py  __main__.py  api_ocr.py  ban_judge.py  config.py  data.py  ocr.py
nonebot_plugin_noadpls/detectors/: __init__.py  text_detector.py  word_manager.py
nonebot_plugin_noadpls/handlers/: __init__.py  admin_handler.py  ban_handler.py  command_handler.py  message_handler.py  utils.py
nonebot_plugin_noadpls/ocr/: __init__.py  api_ocr.py  ocr.py
nonebot_plugin_noadpls/utils/: __init__.py  cache.py  constants.py  log.py
scripts/: update_readme_changelog.py
